--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                             <ul class="left">
                                 <li><span><i class="far fa-clock"></i></span> 9:30am - 6:30pm Mon - Sun</li>
                                 <li><span><i class="fas fa-phone-alt"></i></span> +800-123-4567 6587</li>
-                                <li><span><i class="fas fa-map-marker-alt"></i></span> Anmoore Road Brooklyn, NY 230</li>
+                                <li><span><i class="fas fa-map-marker-alt"></i></span> Glorias Patrias, Merida - Venezuela</li>
                             </ul>
                             <ul class="right">
                                 <li><a href="contact.html#"><i class="fab fa-facebook-messenger"></i></a></li>
@@ -178,8 +178,8 @@
                                                 <span><i class="fas fa-map-marker-alt"></i></span>
                                             </div>
                                             <div class="c-right-text">
-                                                <p>786/A Romada tower</p>
-                                                <p>Brooklyn, NYC</p>
+                                                <p>Merida</p>
+                                                <p>Venezuela</p>
                                             </div>
                                         </div>
                                     </li>
@@ -189,7 +189,7 @@
                                                 <span><i class="fas fa-phone-alt"></i></span>
                                             </div>
                                             <div class="c-right-text">
-                                                <p>001+73643 355 265</p>
+                                                <p>058+73643 355 265</p>
                                                 <p>00 (34 569 543 87)</p>
                                             </div>
                                         </div>
@@ -200,8 +200,10 @@
                                                 <span><i class="far fa-envelope"></i></span>
                                             </div>
                                             <div class="c-right-text">
-                                                <p>info@yourmail.com</p>
-                                                <p>Fonsingo@mail.com</p>
+                                                <p>techosytabiques
+                                                merida@gmail.com</p>
+                                                <p>techosytabiques
+                                                merida@gmail.com</p>
                                             </div>
                                         </div>
                                     </li>
@@ -259,7 +261,7 @@
                                     <li>
                                         <div class="footer-address mt-20">
                                             <span><i class="fas fa-map-marker-alt"></i></span>
-                                            <h5>786/A Romada tower mall Brooklyn, NYC</h5>
+                                            <h5>Merida - Venezuela</h5>
                                         </div>
                                     </li>
                                     <li>
@@ -273,7 +275,7 @@
                                         <div class="footer-address mt-20">
                                             <span><i class="fas fa-envelope-open-text"></i></span>
                                             <h5>info@yourmail.com</h5>
-                                            <h5>jobsinfo@webmail.com</h5>
+                                            <h5>techosytabiquesmerida@gmail.com</h5>
                                         </div>
                                     </li>
                                 </ul>
@@ -371,7 +373,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="copyright-text text-center">
-                                <p>Copyright by @ Bildhub - 2020.</p>
+                                <p>COPYRIGHT @ Techos y Tabiques Merida - 2021. DEsarrollado por <a href="https://www.buckapi.com"> Buckapi</a> </p>
                             </div>
                         </div>
                     </div>
