--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
                             <ul class="left">
                                 <li><span><i class="far fa-clock"></i></span> 9:30am - 6:30pm Mon - Sun</li>
                                 <li><span><i class="fas fa-phone-alt"></i></span> +800-123-4567 6587</li>
-                                <li><span><i class="fas fa-map-marker-alt"></i></span> Anmoore Road Brooklyn, NY 230</li>
+                                <li><span><i class="fas fa-map-marker-alt"></i></span> Glorias Patrias, Merida - Venezuela</li>
                             </ul>
                             <ul class="right">
                                 <li><a href="team.html#"><i class="fab fa-facebook-messenger"></i></a></li>
@@ -443,7 +443,7 @@
                                     <li>
                                         <div class="footer-address mt-20">
                                             <span><i class="fas fa-map-marker-alt"></i></span>
-                                            <h5>786/A Romada tower mall Brooklyn, NYC</h5>
+                                            <h5>Merida - Venezuela</h5>
                                         </div>
                                     </li>
                                     <li>
@@ -457,7 +457,7 @@
                                         <div class="footer-address mt-20">
                                             <span><i class="fas fa-envelope-open-text"></i></span>
                                             <h5>info@yourmail.com</h5>
-                                            <h5>jobsinfo@webmail.com</h5>
+                                            <h5>techosytabiquesmerida@gmail.com</h5>
                                         </div>
                                     </li>
                                 </ul>
@@ -555,7 +555,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="copyright-text text-center">
-                                <p>Copyright by @ Bildhub - 2020.</p>
+                                <p>COPYRIGHT @ Techos y Tabiques Merida - 2021. DEsarrollado por <a href="https://www.buckapi.com"> Buckapi</a> </p>
                             </div>
                         </div>
                     </div>
