--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Bildhub - Construction HTML Template</title>
+        <title>Techos y Tabiques Merida - construcciones y remodelaciones </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -66,7 +66,7 @@
                         </div>
                         <div class="col-xl-10 col-lg-10">
                             <div class="header-button d-none d-lg-block f-right">
-                                <a class="thm-btn" href="blog.html#">Get a quote</a>
+                                <a class="thm-btn" href="blog.html#">Cotizaciones</a>
                             </div>
                             <div class="main-menu f-right">
                                 <nav id="mobile-menu">
